# ATP-B-desktop

./: .gitmodules  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  release-pipeline.yml
project_icon/: prompt.txt
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: comm_proto.rs  data.rs  main.rs  mbtiles.rs  path.rs
src/css/: style.css
src/icons/: prompt.txt
src/js/: communication.js  data.js  import_export.js  leaflet-heat.js  leaflet-src.esm.js  main.js  map.js  mbtiles.js  path-list.js  simpleheat.js
src/js/map/: add_point.js  interpolate.js
src/public/: style.json
