[package]
name = "babara-project-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["ecyht2"]
license = ""
repository = ""
default-run = "babara-project-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "dialog-save", "dialog-open", "fs-read-file"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
geojson = "0.24.1"
geo-types = "0.7.12"
log = "0.4.20"
chrono = { version = "0.4.34", features = ["serde"] }
csv = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
